@@ -1,5 +1,5 @@
 /******************************************************************************
- * $Id: addtiffo.c,v 1.6 2005-12-16 05:59:55 fwarmerdam Exp $
+ * $Id: addtiffo.c,v 1.7 2010-06-08 18:55:15 bfriesen Exp $
  *
  * Project:  GeoTIFF Overview Builder
  * Purpose:  Mainline for building overviews in a TIFF file.
@@ -28,7 +28,11 @@
  ******************************************************************************
  *
  * $Log: addtiffo.c,v $
- * Revision 1.6  2005-12-16 05:59:55  fwarmerdam
+ * Revision 1.7  2010-06-08 18:55:15  bfriesen
+ * * contrib: Add an emacs formatting mode footer to all source files
+ * so that emacs can be effectively used.
+ *
+ * Revision 1.6  2005/12/16 05:59:55  fwarmerdam
  * Major upgrade to support YCbCr subsampled jpeg images
  *
  * Revision 1.4  2004/09/21 13:31:23  dron
@@ -163,3 +167,10 @@ int main( int argc, char ** argv )
 
     return( 0 );
 }
+/*
+ * Local Variables:
+ * mode: c
+ * c-basic-offset: 8
+ * fill-column: 78
+ * End:
+ */
