@@ -577,3 +577,10 @@ static void mem_init ()
     }
 }
 
+/*
+ * Local Variables:
+ * mode: c
+ * c-basic-offset: 8
+ * fill-column: 78
+ * End:
+ */
