@@ -68,3 +68,10 @@ void WriteImage(TIFF *tif)
 
 
 
+/*
+ * Local Variables:
+ * mode: c
+ * c-basic-offset: 8
+ * fill-column: 78
+ * End:
+ */
