@@ -50,3 +50,10 @@ extern void  XTIFFClose(TIFF *tif);
 
 #endif /* __xtiffio_h */
 
+/*
+ * Local Variables:
+ * mode: c
+ * c-basic-offset: 8
+ * fill-column: 78
+ * End:
+ */
